--- a/devsync/package.json
+++ b/devsync/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.1.0",
     "@hookform/resolvers": "^3.4.0",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
