--- a/devsync/package.json
+++ b/devsync/package.json
@@ -38,6 +38,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "@babel/preset-react": "^7.24.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
