--- a/devsync/package.json
+++ b/devsync/package.json
@@ -32,10 +32,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
-    "stream-chat": "^8.33.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@stream-io/video-react-sdk": "^1.0.8",
+    "stream-chat": "^8.33.0",
+    "stream-chat-react": "^11.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6",
